--- a/posts/1.9.llm_others.md
+++ b/posts/1.9.llm_others.md
@@ -403,6 +403,72 @@ ICLR2024
 
 [Navigating the AI Frontier: A Primer on the Evolution and Impact of AI Agents](https://reports.weforum.org/docs/WEF_Navigating_the_AI_Frontier_2024.pdf)
 
+## Claude: building effective agents
+
+[Claude 官方发布《Agent 构建指南》，附 PDF 下载](https://mp.weixin.qq.com/s/hqNcLv3pKgZdqpGxAPlt2A)
+
+[https://www.anthropic.com/research/building-effective-agents](https://www.anthropic.com/research/building-effective-agents)
+
+Agent 系统分为两大类：
+
++ 工作流 (Workflows) ：
+    + 特点：通过预定义的代码路径来编排 LLM 和工具的系统。更像是一个精心设计的流程，每一步都清晰可控。
+    + 场景：当任务非常明确，而且可以分解成一系列固定的步骤时，就像流水线上的工作一样，用“工作流程”就足够了。
++ 智能体 (Agents)：
+    + 特点：由 LLM 动态地指导自身流程和工具使用的系统。更像是一个自主的决策者，能够根据环境反馈灵活调整行动。
+    + 场景：当任务需要很大的灵活性，而且需要模型自己做决策时，就像一个需要随机应变的指挥官，这时候“智能体”就更适合。
+
+现有的框架：
++ LangGraph（LangChain 的工具）：就像一套功能强大的乐高套件，可以用来搭建各种复杂的 Agent 系统。[https://langchain-ai.github.io/langgraph/](https://langchain-ai.github.io/langgraph/)
++ Amazon Bedrock 的 AI Agent 框架：就像一个专业的工具箱，提供了各种构建 Agent 系统的工具和组件。[https://aws.amazon.com/cn/bedrock/agents/](https://aws.amazon.com/cn/bedrock/agents/)
++ Rivet（拖放式 GUI LLM 工作流构建器）：就像一个可视化编辑器，可以通过拖拽的方式来构建 LLM 的工作流程，非常方便。[https://rivet.ironcladapp.com/](https://rivet.ironcladapp.com/)
++ Vellum（复杂工作流的构建和测试工具）：就像一个高级的实验室，可以用来构建和测试复杂的工作流程。[https://www.vellum.ai/](https://www.vellum.ai/)
+
+### 基石：augmented LLM
+
+![](../assets/augmented-llm.png)
+
+通过**检索、工具和记忆**等机制扩展大语言模型的能力，这样大语言模型能够主动运用这些能力来生成自己的搜索查询、选择合适的工具，并决定保留哪些信息。
+
+Anthropic有一个上下文协议（Model Context Protocol，MCP），允许开发者通过简单的客户端实现与不断增长的第三方工具生态系统集成，参考[https://www.anthropic.com/news/model-context-protocol](https://www.anthropic.com/news/model-context-protocol)
+
+### workflow
+
++ prompt chaining：将一个任务分解成一系列步骤，其中的每个LLM的调用都会处理前一个调用的输出，可以在任何中间步骤中添加程序化的检查（见图中的“门控 Gate”），以确保流程仍在正轨上，即有一个失败就exit
+
+![](../assets/workflow-prompt-chaining.png)
+
++ Routing：将不同类型的客户服务查询（一般问题、退款请求、技术支持）导向不同的下游流程、提示和工具，例如将简单/常见的问题路由到较小的模型（如Claude 3.5 Haiku），将困难/不常见的问题路由到功能更强大的模型（如Claude 3.5 Sonnet），以优化成本和速度。
+
+![](../assets/workflow-routing.png)
+
++ Parallelization：同时执行多个任务，并通过程序化方式整合结果。适用：
+    + 分段处理：
+        + 构建安全防护机制，一个模型实例负责处理用户查询，而另一个模型实例负责筛选不当内容或请求。
+        + 自动化评估模型性能，每个模型调用负责评估模型在给定提示下的不同性能指标。
+    + 多重投票：
+        + 对代码进行漏洞审查，多个不同的提示分别审查代码，并在发现问题时进行标记。
+        + 评估内容是否不当，多个提示从不同角度进行评估，或采用不同的投票阈值来平衡误报和漏报。
+
+![](../assets/workflow-parallelization.png)
+
++ Orchestrator-workers（协调者-工作者模式）：一个中央LLM会**动态地分解任务**，并将这些子任务分配给不同的工作者模型，最后再整合所有工作者的结果。适用：
+    + 需要对**多个文件**进行复杂修改的编码产品。
+    + 需要从**多个来源**收集并分析信息以寻找相关内容的搜索任务。
+
+![](../assets/workflow-orchestrator-workers.png)
+
++ Evaluator-optimizer：一个LLM负责调用**生成**响应，而另一个LLM调用则在一个**循环**中提供**评估和反馈**。适用：
+    + 文学翻译，比如翻译模型**最初**可能无法捕捉到的细微差别，但评估器模型可以提供有用的评审意见。
+    + 需要进行**多轮**搜索和分析以收集全面信息的复杂搜索任务，评估器可以用来决定是否需要进一步搜索。
+
+![](../assets/workflow-evaluator-optimizer.png)
+
+### Agents
+**
+当LLM在理解复杂输入、推理规划、可靠使用工具和从错误中恢复等关键能力上成熟时，智能体可以处理开放式问题，无需预先定义步骤，并能根据环境反馈**自主决策**。在特定节点或遇到困难时暂停的功能，以便引入人工干预或反馈。
+
+![](../assets/auto-agents.png)
 
 # 一些其他比较重要的工作
 
@@ -1281,6 +1347,11 @@ Thread 0x9922BCDA (idle): "Thread-6"
     _bootstrap (threading.py:973)
 ```
 
+
+## 国内的huggingface模型下载地址
+
+[https://hf-mirror.com/](https://hf-mirror.com/)
+
 ## 一些报错的解法
 
 ### flash-attention2
@@ -1306,4 +1377,3 @@ FLASH_ATTENTION_FORCE_BUILD=TRUE pip install flash-attn
     + fp32：19.5
     + bf16：312
     + fp16：77.97
-
