--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1430,9 +1430,8 @@ $$
 
 | 论文 | 公司 | 类别 | 做法 | ab收益|
 |----------|-----|------|-------------| ------------|
-|[Knowledge Adaptation from Large Language Model to Recommendation for Practical Industrial Application](https://arxiv.org/pdf/2405.03988)  | 快手 |
-ItemLLM+user decoder| item LLM固定，输入item特征得到item emb；输入item emb过user的12层trans算dense all-action loss，线上推荐模型里加user emb和item emb | 广告cvr+收入 |
-|[Can Small Language Models be Good Reasoners for Sequential Recommendation?](https://arxiv.org/pdf/2403.04260)  | 蚂蚁 | 蒸馏推荐理由| 输入用户行为历史，大LLM(gpt)产出的推荐理由；小llm(llama2)去蒸馏这个理由拿小llm去给出全量user的推荐理由，通过BERT得到emb | 广告cvr+收入 |
+|[Knowledge Adaptation from Large Language Model to Recommendation for Practical Industrial Application](https://arxiv.org/pdf/2405.03988) LEARN | 快手 | ItemLLM+user decoder| item LLM固定，输入item特征得到item emb；输入item emb过user的12层trans算dense all-action loss，线上推荐模型里加user emb和item emb | 广告cvr+收入 |
+|[Can Small Language Models be Good Reasoners for Sequential Recommendation?](https://arxiv.org/pdf/2403.04260) SLIM | 蚂蚁 | 蒸馏推荐理由| 输入用户行为历史，大LLM(gpt)产出的推荐理由；小llm(llama2)去蒸馏这个理由拿小llm去给出全量user的推荐理由，通过BERT得到emb | 广告cvr+收入 |
 
 
 学术界
